<?xml version="1.0"?>
<package>
  <name>aqbar</name>
  <version>0.1.0</version>
  <description>Driver and ROS wrapper for novint falcon</description>
  <author email="sgillen@ucsb.edu">UCSB</author>
  <maintainer email="sgillen@ucsb.edu">UCSB</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>libusb-1.0</build_depend>
  <build_depend>libnifalcon</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>cmake_modules</build_depend>
  <build_depend> moveit_ros_planning_interface </build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libusb-1.0</run_depend>
  <run_depend>libnifalcon</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>   
  <run_depend> moveit_ros_planning_interface </run_depend>
  
</package>
